<resources>
    <string name="app_name">FutureFirst</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>

    </string-array>
    <string name="UserName">Dan Tran</string>
    <string name="Location">Merced, CA</string>
    <string name="Bio">
        I wanna be the very best. Like no one ever was. To catch them is my real test. To train them is my cause.
        I will travel across the land Searching far and wide. Teach pokémon to understand, the power that's inside.
        Pokémon! Gotta catch 'em all. It's you and me I know it's my destiny Pokémon! Oh, you're my best friend.
        In a world we must defend Pokémon! Gotta catch 'em all. A heart so true. Our courage will pull us through.
        You teach me, and I'll teach you Pokémon! Gotta catch 'em all, gotta catch 'em all Yeah!
        Every challenge along the way. With courage I will face I will battle every day To claim my rightful place.
        Come with me, the time is right There's no better team Arm in arm, we'll win the fight It's always been our dream.
    </string>
    <string name="Interests">Programming, Robotics, Sensors, Mobile Apps</string>
    <string name="CurrentEducation">Second Year at UC Merced majoring in Computer Science and Engineering. Currently I am
    uncertain of what I exactly want to do. </string>
    <string name="title_activity_profile_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
