<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePage">

    <RelativeLayout
        android:id="@+id/UserPageTop"
        android:layout_width="match_parent"
        android:layout_height="229dp"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:id="@+id/UserPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="9dp"
                android:adjustViewBounds="true"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:src="@drawable/profilepicture" />
        </RelativeLayout>

        <TextView
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/UserPicture"
            android:layout_centerHorizontal="true"
            android:text="@string/UserName"
            android:textColor="@color/White"
            android:textSize="32dp"
            android:typeface="normal"
            app:fontFamily="sans-serif"/>

        <TextView
            android:id="@+id/UserLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/UserName"
            android:layout_centerHorizontal="true"
            android:padding="4dp"
            android:textAllCaps="true"
            android:text="@string/Location"
            android:textColor="@color/Grey"
            android:textSize="15sp"
            app:fontFamily="sans-serif"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/UserPageBot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/UserPageTop">

        <TextView
            android:id="@+id/BioHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:text="About Me:"
            android:textColor="@color/Gold"
            android:textSize="26sp"
            />

        <TextView
            android:id="@+id/Bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/BioHeader"
            android:text="@string/Bio"
            android:textColor="@color/Black"/>
        <TextView
            android:id="@+id/InterestsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/Bio"
            android:text="Interests:"
            android:textAllCaps="true"
            android:textSize="25dp"
            android:textColor="@color/Gold"/>
        <TextView
            android:id="@+id/Interests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/InterestsHeader"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/Black"
            android:textAllCaps="true"
            android:text="@string/Interests"/>
        <TextView
            android:id="@+id/CurrentEducationHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/Interests"
            android:text="Current Education and Goals:"
            android:textAllCaps="true"
            android:textSize="25dp"
            android:textColor="@color/Gold"/>
        <TextView
            android:id="@+id/CurrentEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/CurrentEducationHeader"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/Black"
            android:text="@string/CurrentEducation"/>

    </RelativeLayout>

</RelativeLayout>